force-app/main/default/objects/Case/fields/Last_Owner_Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Change_Timestamp__c</fullName>
    <label>Last Owner Change Timestamp</label>
    <description>Stores the timestamp of the last owner change event that triggered the summarization process. Populated by the Case_After_Update_Trigger_Summarization Flow.</description>
    <type>DateTime</type>
</CustomField>