force-app/main/default/objects/Case/fields/Next_Agent_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Agent_Action__c</fullName>
    <label>Next Agent Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact customer</fullName>
            </value>
            <value>
                <fullName>Investigate internally</fullName>
            </value>
            <value>
                <fullName>Escalate further</fullName>
            </value>
            <value>
                <fullName>Resolve case</fullName>
            </value>
            <value>
                <fullName>Request more information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>