force-app/main/default/objects/Case/fields/Reproduction_Steps__c.field-meta.xml
<CustomField>
    <fullName>Reproduction_Steps__c</fullName>
    <label>Reproduction Steps</label>
    <type>MultiselectPicklist</type>
    <picklist>
        <picklistValues>
            <fullName>step1</fullName>
            <label>Step 1</label>
        </picklistValues>
        <picklistValues>
            <fullName>step2</fullName>
            <label>Step 2</label>
        </picklistValues>
        <picklistValues>
            <fullName>step3</fullName>
            <label>Step 3</label>
        </picklistValues>
    </picklist>
</CustomField>