force-app/main/default/objects/Case/fields/Resolution_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Minutes__c</fullName>
    <label>Resolution Time (Minutes)</label>
    <description>Minutes from Case creation to closure. Stamped by the Case_Resolution_Time_Calculation flow. Used as the AHT baseline metric.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>