force-app/main/default/objects/Case/fields/Transfer_Submitted_To_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Submitted_To_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the required Engineering transfer information has been submitted.</description>
    <label>Transfer Submitted To Engineering</label>
    <type>Checkbox</type>
</CustomField>