force-app/main/default/objects/Case/fields/Transfer_Summary_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Summary_Reviewed__c</fullName>
    <label>Transfer Summary Reviewed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the receiving agent has reviewed the transfer summary.</description>
</CustomField>