force-app/main/default/objects/Case/fields/Transfer_Summary_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Summary_Reviewed_By__c</fullName>
    <label>Transfer Summary Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases Reviewed</relationshipLabel>
    <relationshipName>Cases_Reviewed</relationshipName>
</CustomField>