force-app/main/default/objects/Case/fields/Transfer_Summary_Reviewed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Summary_Reviewed_DateTime__c</fullName>
    <label>Transfer Summary Reviewed Date/Time</label>
    <type>DateTime</type>
</CustomField>