force-app/main/default/objects/Case/fields/Transferred_to_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_Engineering__c</fullName>
    <label>Transferred to Engineering</label>
    <type>Checkbox</type>
</CustomField>