force-app/main/default/objects/Case/fields/Transferred_To_Engineering_By__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To_Engineering_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who completed the transfer to Engineering.</description>
    <label>Transferred To Engineering By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Transferred Cases To Engineering</relationshipLabel>
    <relationshipName>TransferredCasesToEngineering</relationshipName>
    <type>Lookup</type>
</CustomField>