force-app/main/default/objects/Case/fields/Transferred_To_Engineering_On__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To_Engineering_On__c</fullName>
    <description>Date and time when the Case was submitted to Engineering.</description>
    <label>Transferred To Engineering On</label>
    <type>DateTime</type>
</CustomField>