force-app/main/default/objects/Case/fields/Troubleshooting_Steps__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Steps__c</fullName>
    <description>Documents troubleshooting steps already taken before transfer to Engineering.</description>
    <inlineHelpText>Enter troubleshooting steps already taken. Minimum 20 characters, maximum 2000.</inlineHelpText>
    <label>Troubleshooting Steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>