force-app/main/default/objects/Case/fields/Troubleshooting_Steps_Taken__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Steps_Taken__c</fullName>
    <label>Troubleshooting Steps Taken</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>