force-app/main/default/objects/Case/fields/Workspace_Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Opened_At__c</fullName>
    <label>Workspace Opened At</label>
    <description>DateTime stamp recorded when the agentConsoleWorkspace LWC component first loads for this Case. Used for AHT and FCR reporting.</description>
    <type>DateTime</type>
</CustomField>