force-app/main/default/objects/Case/fields/Workspace_Used__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Used__c</fullName>
    <label>Workspace Used</label>
    <description>Checkbox set to TRUE by the Agent Console Workspace LWC on component load. Used to measure workspace adoption for AHT/FCR reporting.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>