force-app/main/default/objects/Case/validationRules/Case_Engineering_Transfer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Engineering_Transfer_Validation</fullName>
    <active>true</active>
    <description>Ensures required fields are populated when transferring to Engineering queue</description>
    <errorConditionFormula>AND(
        ISCHANGED(OwnerId),
        Owner:Group.DeveloperName = 'Engineering',
        OR(
            ISBLANK(TEXT(Reproduction_Steps__c)),
            ISBLANK(Troubleshooting_Steps_Taken__c),
            LEN(Troubleshooting_Steps_Taken__c) &lt; 20
        )
    )</errorConditionFormula>
    <errorMessage>Cases transferred to Engineering must include reproduction steps and detailed troubleshooting documentation (minimum 20 characters).</errorMessage>
</ValidationRule>